force-app/main/default/objects/PO_Stage_Errors__c/PO_Stage_Errors__c.object-meta.xml
<CustomObject>
    <label>PO Stage Errors</label>
    <nameField>
        <label>PO Stage Errors Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PO Stage Errors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>