force-app/main/default/objects/PO_Stage_Errors__c/fields/Error_Entity__c.field-meta.xml
<CustomField>
    <fullName>Error_Entity__c</fullName>
    <label>Error_Entity</label>
    <type>TextArea</type>
</CustomField>