force-app/main/default/objects/PO_Stage_Errors__c/fields/Opp_Owners_Email__c.field-meta.xml
<CustomField>
    <fullName>Opp_Owners_Email__c</fullName>
    <label>Opp Owners Email</label>
    <type>Email</type>
</CustomField>