force-app/main/default/objects/PO_Stage_Errors__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>PO Stage Errors</relationshipLabel>
    <relationshipName>PO_Stage_Errors</relationshipName>
    <type>Lookup</type>
</CustomField>