force-app/main/default/objects/PO_Stage_Errors__c/fields/Opportunity_Update_Message__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Update_Message__c</fullName>
    <label>Opportunity Update Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>