force-app/main/default/objects/PO_Stage_Errors__c/fields/Opportunity_Update_Status__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Update_Status__c</fullName>
    <label>Opportunity Update Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Opportunity Update Not Required</fullName>
            </value>
            <value>
                <fullName>Opportunity Update Completed</fullName>
            </value>
            <value>
                <fullName>Opportunity Update Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>