force-app/main/default/objects/PO_Stage_Errors__c/fields/Order_Status_Message__c.field-meta.xml
<CustomField>
    <fullName>Order_Status_Message__c</fullName>
    <label>Order Status Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>