force-app/main/default/objects/PO_Stage_Errors__c/fields/PO_Stage_Id__c.field-meta.xml
<CustomField>
    <fullName>PO_Stage_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PO Stage Id</label>
    <referenceTo>PO_Stage__c</referenceTo>
    <relationshipLabel>PO Stage Errors</relationshipLabel>
    <relationshipName>PO_Stage_Errors</relationshipName>
    <type>Lookup</type>
</CustomField>