force-app/main/default/objects/PO_Stage_Errors__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote</label>
    <referenceTo>SBQQ__Quote__c</referenceTo>
    <relationshipLabel>PO Stage Errors</relationshipLabel>
    <relationshipName>PO_Stage_Errors</relationshipName>
    <type>Lookup</type>
</CustomField>