force-app/main/default/objects/PO_Stage_Errors__c/fields/Quote_Line__c.field-meta.xml
<CustomField>
    <fullName>Quote_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>stores corresponding quote line</description>
    <label>Quote Line</label>
    <referenceTo>SBQQ__QuoteLine__c</referenceTo>
    <relationshipLabel>PO Stage Errors</relationshipLabel>
    <relationshipName>PO_Stage_Errors</relationshipName>
    <type>Lookup</type>
</CustomField>