force-app/main/default/objects/PO_Stage_Errors__c/fields/Quote_update_Message__c.field-meta.xml
<CustomField>
    <fullName>Quote_update_Message__c</fullName>
    <label>Quote update Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>