force-app/main/default/objects/PO_Stage_Errors__c/fields/Quote_Update_Status__c.field-meta.xml
<CustomField>
    <fullName>Quote_Update_Status__c</fullName>
    <label>Quote Update Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Quote Update Not Required</fullName>
            </value>
            <value>
                <fullName>Quote Update Completed</fullName>
            </value>
            <value>
                <fullName>Quote Update Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>